--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,17 @@
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import 'utilities/custom-utility';
+
+@import "static/styles.css";
+@tailwind components;
+@tailwind utilities;
+
+
+@import "static/styles.css/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
