--- a/templates/home.html
+++ b/templates/home.html
@@ -136,11 +136,25 @@ Register users :{{ count_all_users }}
 </div>
 
 
-<img src="{{ request.user.profile_image.url }} ">
 
 
 
 
+
+<div class="container">
+
+
+
+<img src="{{ avatar.avatar.url }}" alt="" style=" width: 50px;
+  height: 50px;
+  border-radius: 50%; /*don't forget prefixes*/
+
+  background-position: center center;
+  /* as mentioned by Vad: */
+  background-size: cover;">
+
+
+</div>
 
 
 
