--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,26 @@
 
 
 
+
+ <link href="{% static 'style.css' %}" rel="stylesheet">
+ <link href="{% static 'flex-slider.css' %}" rel="stylesheet">
+ <link href="{% static 'fontawesome.css' %}" rel="stylesheet">
+ <link href="{% static 'owl.css' %}" rel="stylesheet">
+ <link href="{% static 'templatemo-stand-blog.css' %}" rel="stylesheet">
+
+
+
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
+ <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
+
+
+
+
+
+
+
           {% endblock %}
 </head>
 <body>
