--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -63,6 +63,76 @@
 
 
 
+
+    <section class="contact-us">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-12">
+            <div class="down-contact">
+              <div class="row">
+                <div class="col-lg-8">
+                  <div class="sidebar-item contact-form">
+                    <div class="sidebar-heading">
+                      <h2>Add your blog to help others by sharing your knowledge !</h2>
+                    </div>
+                    <div class="content">
+                      <form action="{% url 'add_blog' %}" method="post">
+                        {% csrf_token %}
+                          <div class="row">
+                          <div class="col-md-6 col-sm-12">
+                            <fieldset >
+                            {{ form.category }}
+                            </fieldset>
+                          </div>
+                          <div class="col-md-6 col-sm-12">
+                            <fieldset>
+                              <input name="title" type="text" id="title" placeholder="Blog title" required="">
+                            </fieldset>
+                          </div>
+
+                          <div class="col-lg-12">
+                            <fieldset>
+                              <textarea name="content" rows="6" id="content" placeholder="Content" required=""></textarea>
+                            </fieldset>
+                          </div>
+                          <div class="col-lg-12">
+                            <fieldset>
+                              <button type="submit" id="form-submit" class="main-button">Add</button>
+                            </fieldset>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+
+
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-12">
+            <div id="map">
+              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="450px" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
     <form action="{% url 'add_blog' %}" method="POST">
     {% csrf_token %}
 
