--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -141,17 +141,17 @@
 
 
 
-
-    <form action="{% url 'add_blog' %}" method="POST">
-    {% csrf_token %}
-
-    {{ form.as_p }}
-
-
-  <button type="submit" name="submit">Add</button>
-
-
-    </form>
+{##}
+{#    <form action="{% url 'a_blog' %}" method="POST" enctype="multipart/form-data">#}
+{#    {% csrf_token %}#}
+{##}
+{#    {{ form.as_p }}#}
+{##}
+{##}
+{#  <button type="submit" name="submit">Add</button>#}
+{##}
+{##}
+{#    </form>#}
 
 
 
