--- a/templates/profile.html
+++ b/templates/profile.html
@@ -133,6 +133,8 @@
        <br>
    email : {{ user.email }}
    <br>
+{#       BIO : {{ user.bio.bio }}#}
+       <br>
    last login : {{ user.last_login }}
     <br>
    Joined on  : {{ user.date_joined }}
