--- a/templates/user.html
+++ b/templates/user.html
@@ -104,6 +104,93 @@
     <br>
 
 
+
+
+
+
+     <div class="profile container bg-light shadow mb-5 py-5">
+
+              <h1 class="font text-center color">Profile</h1>
+<hr> <br>
+             <div class="row">
+                     <div class="col-sm-6 text-center">
+
+
+
+
+{% if  blog_user_avatar.avatar.url == None %}
+     <img src="/media/profile.png" alt="" >
+{% else %}
+   <img src="{{ blog_user_avatar.avatar.url }}" alt="">
+
+{% endif %}
+
+
+
+
+
+
+                     </div>
+
+                     <div class="col-sm-6">
+                             <h3>@{{ get_user }}</h3><br>
+                             <h5>{{users.email}}</h5>
+
+                         {% if check1.boolean == True%}
+                      <a href="{% url 'unfollow' check1.id%}" >
+                             <button type="button" class="btn btn-outline-info">Following</button>
+                      </a>
+       {% else %}
+            <a  href="{% url 'follow_user' user.id%}" >
+                 <button type="button" class="btn btn-outline-info">Follow</button>
+            </a>
+        {% endif %}
+<br>
+<br>
+                         <button type="button" class="btn btn-info">
+                            Blogs
+                             <span class="badge badge-info">{{ blog_count }}</span>
+  <span class="sr-only">unread messages</span>
+                     </button>
+<br>
+  <br>
+                         <button type="button" class="btn btn-info">
+                            Followers
+                             <span class="badge badge-info">{{ followers_count }}</span>
+  <span class="sr-only">unread messages</span>
+                     </button>
+
+
+                     </div>
+             </div>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {{ get_user }}
 
        {% if check1.boolean == True%}
@@ -120,7 +207,21 @@ Followers : {{ followers_count }}
     <section class="blog-posts">
 
 
-    <img src="{{ blog_user_avatar.avatar.url }}" alt="">
+{% if  blog_user_avatar.avatar.url == None %}
+     <img src="/media/profile.png" alt="" style=" width: 50px;
+  height: 50px;
+  border-radius: 50%; /*don't forget prefixes*/
+
+  background-position: center center;
+  /* as mentioned by Vad: */
+  background-size: cover;">
+{% else %}
+   <img src="{{ blog_user_avatar.avatar.url }}" alt="">
+
+{% endif %}
+
+
+
 
 
 
