--- a/templates/profile.html
+++ b/templates/profile.html
@@ -98,7 +98,7 @@
 
 
 {% if  avatar.avatar.url  == None %}
-     <img src="media/profile.png" alt="" style=" width: 150px;
+     <img src="/media/profile.png" alt="" style=" width: 150px;
   height: 150px;
   border-radius: 50%; /*don't forget prefixes*/
 
