--- a/templates/user.html
+++ b/templates/user.html
@@ -149,14 +149,14 @@
 <br>
                          <button type="button" class="btn btn-info">
                             Blogs
-                             <span class="badge badge-info">{{ blog_count }}</span>
+                             <span class="badge badge-danger">{{ blog_count }}</span>
   <span class="sr-only">unread messages</span>
                      </button>
 <br>
   <br>
                          <button type="button" class="btn btn-info">
                             Followers
-                             <span class="badge badge-info">{{ followers_count }}</span>
+                             <span class="badge badge-danger">{{ followers_count }}</span>
   <span class="sr-only">unread messages</span>
                      </button>
 
