--- a/templates/user.html
+++ b/templates/user.html
@@ -149,14 +149,14 @@
 <br>
                          <button type="button" class="btn btn-info">
                             Blogs
-                             <span class="badge badge-danger">{{ blog_count }}</span>
+                             <span class="badge badge-dark">{{ blog_count }}</span>
   <span class="sr-only">unread messages</span>
                      </button>
 <br>
   <br>
                          <button type="button" class="btn btn-info">
                             Followers
-                             <span class="badge badge-danger">{{ followers_count }}</span>
+                             <span class="badge badge-dark">{{ followers_count }}</span>
   <span class="sr-only">unread messages</span>
                      </button>
 
@@ -355,168 +355,6 @@
           }
       }
     </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand"  href="{% url 'home' %}">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link"  href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-
-        Welcome {{ user.get_username }} //
-
-     <a class="" href="{% url 'logout' %}">Logout</a>
-
-    </form>
-  </div>
-</nav>
-
-<br><br><br><br><br>
-
-   <div class="container">
-
-
-
-
-
-
-
-
-{{ get_user }}
-
-
-
-       {% if check1.boolean == True%}
-                      <a class="btn btn-primary btn-sm" href="{% url 'unfollow' check1.id%}" >unfollow</a>
-       {% else %}
-            <a class="btn btn-primary btn-sm" href="{% url 'follow_user' user.id%}" >Follow</a>
-        {% endif %}
-
-   <br>
-
-Blogs : {{ blog_count }}
-   <br>
-Followers : {{ followers_count }}
-
-
-<div class="container">
-
-
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#Category </th>
-      <th scope="col">Title</th>
-      <th scope="col">Content</th>
-      <th scope="col">Published</th>
-
-          <th scope="col">Read more</th>
-
-
-    </tr>
-  </thead>
-  <tbody>
-    {% for all_blogs in all_blogs %}
-    <tr>
-      <th scope="row">{{ all_blogs.category }}</th>
-      <td>{{all_blogs.title }}</td>
-      <td>{{ all_blogs.content }}</td>
-      <td>{{ all_blogs.created }}</td>
-      <td>
-
-       <td>
-     <a class="btn btn-primary btn-sm" href="{% url 'read_more' all_blogs.id %}" >Read more</a>
-    </td>
-
-
-    </tr>
-
-
-   {% endfor %}
-
-
-  </tbody>
-</table>
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
 
 
 
