--- a/templates/user.html
+++ b/templates/user.html
@@ -136,20 +136,22 @@
                               <button type="button" class="btn btn-outline-info">Follow</button>
                         </a>
                  {% endif %}
-                            <br>
-                            <br>
-                 <button type="button" class="btn btn-info">
-                               Blogs
-                      <span class="badge badge-dark">{{ blog_count }}</span>
-                      <span class="sr-only">unread messages</span>
-                  </button>
-                            <br>
-                              <br>
-                  <button type="button" class="btn btn-info">
-                          Followers
-                      <span class="badge badge-dark">{{ followers_count }}</span>
-                      <span class="sr-only">unread messages</span>
-                   </button>
+
+       Blogs  {{ blog_count }} | Followers  {{ followers_count }}
+{#                            <br>#}
+{#                            <br>#}
+{#                 <button type="button" class="btn btn-info">#}
+{#                               Blogs#}
+{#                      <span class="badge badge-dark">{{ blog_count }}</span>#}
+{#                      <span class="sr-only">unread messages</span>#}
+{#                  </button>#}
+{#                            <br>#}
+{#                              <br>#}
+{#                  <button type="button" class="btn btn-info">#}
+{#                          Followers#}
+{#                      <span class="badge badge-dark">{{ followers_count }}</span>#}
+{#                      <span class="sr-only">unread messages</span>#}
+{#                   </button>#}
 
 
                      </div>
